src/test/resources/30/single/xhtml/valid/data.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<?oxygen RNGSchema="../../../src/schema/epub-xhtml-30.rnc" type="compact"?>
<?oxygen SCHSchema="../../../src/schema/epub-xhtml-30.sch"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ssml="http://www.w3.org/2001/10/synthesis" xml:lang="en" lang="en" ssml:alphabet="x-SAMPA">
    <head>
        <title>ssml</title>
    </head>
    <body>
        <p ssml:ph="[pra'h-fessah]">Prof.</p>
        <section ssml:alphabet="ipa">
            <p ssml:ph="ldskdlklsd">Prof.</p>
        </section>
		
		<ol>
 <li data-length="2m11s">Beyond The Sea</li>
</ol>
    </body>
</html>
