src/test/resources/30/single/xhtml/invalid/issue230.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<?oxygen RNGSchema="../../../src/schema/epub-xhtml-30.rnc" type="compact"?>
<?oxygen SCHSchema="../../../src/schema/epub-xhtml-30.sch"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
    <head>
        <title>ssml</title>
    </head>
	<body>
		<div epub:type="acknowledgements">
			<p>Test</p>
		</div>
	</body>
</html>
